Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Access all of Xignite's <a href="http://www.xignite.com/products/">financial market data APIs</a> natively from .NET using Xignite's REST API, including access to documentation via intellisense!</p>
 
-<p>1) Add the <a href="https://github.com/Xignite/DotNetSDK">DotNetSDK.dll</a> as a reference in your .NET 4.5 project</p>
+<p>1) Add the <a href="https://github.com/Xignite/DotNetSDK/releases/">DotNetSDK.dll</a> as a reference in your .NET 4.5 project</p>
 
 <p>2) Add a using statement for the Xignite.Sdk.Api namespace.</p>
 
