Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,17 +32,24 @@
 
         <section id="main_content">
           <h3>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h3>
+
+<ul>
+<li>No setup needed.  Get your data in 3 or less lines of code.</li>
+<li>Takes care of authentication for you.</li>
+<li>Inline access to API documentation via Intellisense.</li>
+<li>Access to all Xignite's financial market data RESTful APIs.</li>
+<li>Support for Asynchronous calls via async.</li>
+</ul><h3>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h3>
 
 <p>Access all of Xignite's <a href="http://www.xignite.com/products/">financial market data APIs</a> natively from .NET using Xignite's REST API, including access to documentation via intellisense!</p>
 
-<p>1) Add the <a href="https://github.com/Xignite/DotNetSDK/releases/">DotNetSDK.dll</a> as a reference in your .NET 4.5 project.  Be sure to keep the DotNetSDK.XML file alongside it in order to get the documentation.</p>
-
-<p>2) Add a using statement for the Xignite.Sdk.Api namespace.</p>
-
-<p>3) Begin using the API like so:</p>
-
-<pre><code>using System;
+<ol>
+<li><p>Add the <a href="https://github.com/Xignite/DotNetSDK/releases/">DotNetSDK.dll</a> as a reference in your .NET 4.5 project.  Be sure to keep the DotNetSDK.XML file alongside it in order to get the documentation.</p></li>
+<li><p>Add a using statement for the Xignite.Sdk.Api namespace.</p></li>
+<li><p>Begin using the API like so:</p></li>
+</ol><pre><code>using System;
 using Xignite.Sdk.Api;
 
 class Program
@@ -74,7 +81,7 @@ class Program
 <h3>
 <a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h3>
 
-<p>[screenshot here]</p>
+<p><img src="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png" alt="C# example"></p>
         </section>
 
         <footer>
