--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ class Program
 <h3>
 <a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h3>
 
-<p><img src="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png" alt="C# example"></p>
+<p><a href="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png"><img src="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png" alt="C# example"></a></p>
         </section>
 
         <footer>
