Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ class Program
 
 <p><a href="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png"><img src="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png" alt="C# example"></a></p>
 
-<p>For suggestions or issues to report, please email <a href="mailto:sdk@xignite.com">sdk@xignite.com</a>.</p>
+<p>For feedback or issues to report, please email <a href="mailto:sdk@xignite.com">sdk@xignite.com</a>.</p>
         </section>
 
         <footer>
