Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ class Program
 <li>
 <strong>XigniteSdkTimeout</strong> - This is a configurable timeout in ms that will be respected for all the API calls the SDK makes.  The default is 100,000 milliseconds (100 seconds).</li>
 </ul><h3>
-<a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h3>
+<a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h3>
 
 <p><a href="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png"><img src="https://xignite-github-sdk.s3.amazonaws.com/dotnet-sdk-example.png" alt="C# example"></a></p>
 
