Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <li>Inline access to API documentation via Intellisense.</li>
 <li>Access to all Xignite's financial market data RESTful APIs.</li>
 <li>Support for Asynchronous calls via async.</li>
-<li>-Configurable api token and timeout values provided by app.config.</li>
+<li>Configurable api token and timeout values provided by app.config.</li>
 </ul><h3>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h3>
 
