Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Dotnetsdk</h1>
-          <h2>Xignite SDK for .NET 4.5 (BETA)</h2>
+          <h2>Xignite SDK for .NET 4.5</h2>
         </header>
 
         <section id="downloads" class="clearfix">
