--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <pre><code>using System;
 using Xignite.Sdk.Api;
 
-class Program
-{
+    class Program
+    {
     static void Main(string[] args)
     {   
         var currencies = new XigniteGlobalCurrencies("YOUR_TOKEN_HERE");
@@ -86,9 +86,10 @@ class Program
 <h2>
 <a id="appconfig-options" class="anchor" href="#appconfig-options" aria-hidden="true"><span class="octicon octicon-link"></span></a>App.config Options</h2>
 
+<p>Fields with * are required.</p>
+
 <ul>
-<li>
-<strong>XigniteSdkApiToken</strong> - [string] This is your API token that the SDK will use for all the calls.  This value can be overridden by the individual API constructor.</li>
+<li>*<strong>XigniteSdkApiToken</strong> - [string] This is your API token that the SDK will use for all the calls.  This value can be overridden by the individual API constructor.</li>
 <li>
 <strong>XigniteSdkTimeout</strong> - [int32] This is a configurable timeout in ms that will be respected for all the API calls the SDK makes.  The default is 30,000 milliseconds (30 seconds).</li>
 <li>
